@@ -3,6 +3,10 @@ $Id$
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
 
+- add support for user-customizable captive portal logout and status page,
+  as well as a password change option for local CP users
+  (contributed by Stephane Billiart)
+
 - don't let missing DNS server information keep DHCPD from starting
 
 
